[package]
name = "interview-keepie"
version = "0.1.0"
edition = "2021"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
surf = { version = "2.3.2", features = ["rustls_crate", "h1-client-rustls"], default-features = false }
